login error fixed

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <script type="text/javascript" src="static/js/common.js"></script>
     <script type="text/javascript" src="static/js/user.js"></script>
+    <script type="text/javascript" src="static/js/login.js"></script>
+
 </head>
 <body>
     <header>
