--- a/templates/keyword.html
+++ b/templates/keyword.html
@@ -4,18 +4,15 @@
     <title>Keyword Analysis | YAMP: Youtube Ad Matching Platform</title>
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
     <script type="text/javascript" src="/static/js/common.js"></script>
-    <script type="text/javascript" src="/static/js/keyword.js"></script>
+    <script type="text/javascript" src="static/js/login.js"></script>
 </head>
 <body>
     <header>
     </header>
     <nav>
         <div class="login-button-container">
-            {% if login_status %}
-                <a href="#" id="logout-button">Log Out</a>
-            {% else %}
-                <a href="#" id="login-button">Log In</a>
-            {% endif %}
+            <a href="#" id="logout-button">Log Out</a>
+        </div>
     </nav>
 
     <div class="container">
