--- a/templates/proposal_edited.html
+++ b/templates/proposal_edited.html
@@ -108,7 +108,55 @@
             newKeywordInput.required = true;
             keywordContainer.appendChild(newKeywordInput);
         });
-        
+
+        function setExampleKeywords(productType) {
+            var exampleKeywords = [];
+            switch (productType) {
+                case "technology":
+                    exampleKeywords = ["스마트폰", "컴퓨터", "인터넷", "IT", "디지털"];
+                    break;
+                case "gaming":
+                    exampleKeywords = ["게임", "오버워치", "리그오브레전드", "마인크래프트", "롤"];
+                    break;
+                case "beauty-fashion":
+                    exampleKeywords = ["화장품", "패션", "뷰티", "메이크업", "스타일"];
+                    break;
+                case "food-beverage":
+                    exampleKeywords = ["음식", "요리", "음료", "레시피", "식품"];
+                    break;
+                case "health-fitness":
+                    exampleKeywords = ["건강", "운동", "다이어트", "피트니스", "웰빙"];
+                    break;
+                case "travel-tourism":
+                    exampleKeywords = ["여행", "관광", "해외여행", "국내여행", "여행팁"];
+                    break;
+                case "automotive":
+                    exampleKeywords = ["자동차", "차량", "자동차리뷰", "자동차정비", "자동차운전"];
+                    break;
+                case "entertainment-media":
+                    exampleKeywords = ["엔터테인먼트", "영화", "드라마", "연예인", "미디어"];
+                    break;
+                case "home-lifestyle":
+                    exampleKeywords = ["가정", "인테리어", "라이프스타일", "가구", "홈케어"];
+                    break;
+                case "financial-services":
+                    exampleKeywords = ["금융", "재테크", "보험", "은행", "금융상품"];
+                    break;
+                default:
+                    break;
+            }
+            var keywordContainer = document.getElementById("keyword-container");
+            keywordContainer.innerHTML = "";
+            exampleKeywords.forEach(function(keyword) {
+                var newKeywordInput = document.createElement("input");
+                newKeywordInput.type = "text";
+                newKeywordInput.name = "keywords[]";
+                newKeywordInput.placeholder = keyword;
+                newKeywordInput.required = true;
+                keywordContainer.appendChild(newKeywordInput);
+            });
+        }
+
         // Add a new global variable
         var keywordCount = 0;
 
@@ -147,7 +195,7 @@
         var currentDatetime = new Date();
         var currentDatetimeString = currentDatetime.toLocaleString('en-US');
         $("#timeline").value = currentDatetimeString;
-            
+
         $('#proposal-form').addEventListener('submit', function() {
             // copy product value
             $('#hidden-product').value = $('#product').value;
